<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <TextView
        android:id="@+id/AttributeForProfile"
        android:text="@string/tbd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="12.0sp"
        android:textColor="#ff000000"
        android:background="#ff888888"/>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

                <TextView
                    android:id="@+id/AttributeName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/volumeLabel"/>

                <SeekBar
                    android:id="@+id/volume"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"/>

                <TableLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TableRow>

                        <TextView
                            android:id="@+id/vibrateLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dip"
                            android:text="@string/vibrateLabel"/>

                        <CheckBox
                            android:id="@+id/vibrateCheckbox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </TableRow>

                    <Button
                        android:id="@+id/doneButton"
                        android:text="@string/done"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"/>

                </TableLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
