<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/attr_list_root"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:orientation="vertical">

    <LinearLayout
        android:id="@+id/attr_buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="10">

        <Button
            android:id="@+id/newItemButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:drawableStart="@drawable/add"
            android:gravity="center"
            android:text="@string/newAttribute"/>

        <Button
            android:id="@+id/doneButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/done"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/attr_buttons"
        android:layout_alignParentTop="true"
        android:layout_margin="3dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/AttributeProfile"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#ff888888"
            android:gravity="center_horizontal"
            android:text="@string/AttributesForProfile"
            android:textColor="#ff000000"
            android:textSize="12.0sp"/>

        <ListView
            android:id="@+id/android:list"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true"/>
    </LinearLayout>

</RelativeLayout>